WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77159
We don't need to always repaint overlay scrollbars if they're in layers
https://bugs.webkit.org/show_bug.cgi?id=77159
Summary
We don't need to always repaint overlay scrollbars if they're in layers
Anders Carlsson
Reported
2012-01-26 16:16:10 PST
We don't need to always repaint overlay scrollbars if they're in layers
Attachments
Patch
(2.43 KB, patch)
2012-01-26 16:24 PST
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-01-26 16:24:54 PST
Created
attachment 124210
[details]
Patch
Anders Carlsson
Comment 2
2012-01-26 16:31:51 PST
Committed
r106061
: <
http://trac.webkit.org/changeset/106061
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug