We don't need to always repaint overlay scrollbars if they're in layers https://bugs.webkit.org/show_bug.cgi?id=77159

Reviewed by Beth Dakin.

If a scrollable area has overlay scrollbars we'll always invalidate both scrollbars, regardless of
whether both scroll offsets actually change since they're translucent and we want to draw the new page
contents underneath.

However, if the scrollbars are painted into GraphicsLayers they'll be composited by the GPU, and so we don't
need to repaint them unless the corresponding scroll offset actually changes (which is handled in Scrollbar::updateThumb).

* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::setScrollOffsetFromAnimation):

git-svn-id: svn://svn.chromium.org/blink/trunk@106061 bbb929c8-8fbe-4397-9dbb-9b2b20218538